# NaViL

./: .gitignore  LICENSE  README-zh.md  README.md  demo-local.py  demo.py  pyproject.toml  requirements.txt
navil/: conversation.py  dist_utils.py
navil/model/: __init__.py
navil/model/internlm2/: configuration_internlm2.py  modeling_internlm2_ve.py
navil/model/navil_chat/: __init__.py  configuration_navil_chat.py  configuration_navil_vit.py  modeling_navil_chat.py  modeling_navil_vit_anyres.py  modular_intern_vit.py
navil/model/qwen2_vl/: __init__.py  image_processing_qwen2_vl.py
navil/model/qwen3/: configuration_qwen3.py  modeling_qwen3_ve.py
navil/train/: constants.py
