[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "navil"
version = "1.0.0"
description = "Rethinking Scaling Properties of Native Multimodal Large Language Models under Data Constraints."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate==0.34.2",
    "bitsandbytes==0.42.0",
    "datasets==2.16.1",
    "decord==0.6.0",
    "deepspeed==0.15.0",
    "diffusers==0.31.0",
    "einops==0.5.0",
    "einops-exts==0.0.4",
    "flash-attn==2.5.6",
    "huggingface-hub==0.30.2",
    "imageio==2.34.1",
    "numpy==1.24.4",
    "opencv-python==4.9.0.80",
    "orjson==3.9.15",
    "peft==0.9.0",
    "pycocoevalcap==1.2",
    "pyyaml==6.0.1",
    "scikit-learn==1.5.0",
    "scipy==1.14.1",
    "sentencepiece==0.1.99",
    "shortuuid==1.0.12",
    "tensorboard==2.11.2",
    "termcolor==2.4.0",
    "timm==0.9.12",
    "tokenizers==0.21.1",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "tqdm==4.65.2",
    "transformers==4.51.0",
    "triton==2.2.0",
    "yacs==0.1.8",
]

[project.urls]
"Homepage" = "https://github.com/OpenGVLab/NaViL"
"Bug Tracker" = "https://github.com/OpenGVLab/NaViL/issues"

[tool.setuptools.packages.find]
exclude = ["data*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "shell*", "OUTPUT*"]

[tool.wheel]
exclude = ["data*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "shell*", "OUTPUT*"]

[tool.pyright]
include = ["navil", "eval", "tools"]
exclude = [
    "work_dirs",
    "**/__pycache__",
    "OUTPUT",
    "playground",
    "pretrained",
    "pretrained_models",
    "data",
]
typeCheckingMode = "off"
